--- a/Homework/Day001_HW.ipynb
+++ b/Homework/Day001_HW.ipynb
@@ -1,88 +1,168 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 資料來源與檔案存取\n",
+    "\n",
+    "* 資料來源與取得\n",
+    "* 開放資料\n",
+    "* 資料儲存格式\n",
+    "* Python 存取檔案"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 作業目標\n",
+    "\n",
+    "* 1.（簡答題）檔案、API、爬蟲三種取得資料方式有什麼不同？\n",
+    "* 2.（實作）完成一個程式，需滿足下列需求：\n",
+    "    * 下載指定檔案到 Data 資料夾，存成檔名 Homework.txt\n",
+    "    * 檢查 Data 資料夾是否有 Homework.txt 檔名之檔案\n",
+    "    * 將「Hello World」字串覆寫到 Homework.txt 檔案\n",
+    "    * 檢查 Homework.txt 檔案字數是否符合 Hello World 字數\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.（簡答題）檔案、API、爬蟲三種取得資料方式有什麼不同？"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.（實作）完成一個程式，需滿足下列需求：\n",
+    "    * 下載指定檔案到 Data 資料夾，存成檔名 Homework.txt\n",
+    "    * 檢查 Data 資料夾是否有 Homework.txt 檔名之檔案\n",
+    "    * 將「Hello World」字串覆寫到 Homework.txt 檔案\n",
+    "    * 檢查 Homework.txt 檔案字數是否符合 Hello World 字數\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 根據需求引入正確的 Library\n",
+    "\n",
     "from urllib.request import urlretrieve\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('../Data/Homework.txt', <http.client.HTTPMessage at 0x5521b48>)"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "url=\"https://www.w3.org/TR/PNG/iso_8859-1.txt\"\n",
-    "urlretrieve(url,\"../Data/Homework.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "成功下載Homework.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "dirs=os.listdir(\"../Data/\")\n",
-    "if \"Homework.txt\" in dirs:\n",
-    "    print(\"成功下載Homework.txt\")\n",
-    "else:\n",
-    "    print(\"尚未下載Homework.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../Data/Homework.txt\",\"w\") as hf:\n",
-    "    hf.write(\"Holle World\")"
+    "# 下載檔案到 Data 資料夾，存成檔名 Homework.txt\n",
+    "\n",
+    "try:\n",
+    "    os.makedirs( './Data', exist_ok=True )\n",
+    "    url=\"https://www.w3.org/TR/PNG/iso_8859-1.txt\"\n",
+    "    urlretrieve(url,\"./Data/Homework.txt\")\n",
+    "except:\n",
+    "    print('發生錯誤！')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Homework.txt 檔案字數與 Hello World 字數相同\n"
+      "[O] 檢查 Data 資料夾是否有 Homework.txt 檔名之檔案\n"
      ]
     }
    ],
    "source": [
-    "with open(\"../Data/Homework.txt\",\"r\") as hf:\n",
-    "    hfContect=hf.read()\n",
-    "if len(hfContect) == len(\"Hello World\"):\n",
-    "    print(\"Homework.txt 檔案字數與 Hello World 字數相同\")\n",
+    "# 檢查 Data 資料夾是否有 Homework.txt 檔名之檔案\n",
+    "\n",
+    "files = os.listdir(\"./Data/\")\n",
+    "\n",
+    "if 'Homework.txt' in files:\n",
+    "    print('[O] 檢查 Data 資料夾是否有 Homework.txt 檔名之檔案')\n",
     "else:\n",
-    "    print(\"Homework.txt 檔案字數與 Hello World 字數不同\")"
+    "    print('[X] 檢查 Data 資料夾是否有 Homework.txt 檔名之檔案')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Holle World\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 將「Hello World」字串覆寫到 Homework.txt 檔案\n",
+    "\n",
+    "f = 'Hello World'\n",
+    "\n",
+    "with open(\"./Data/Homework.txt\", \"w\") as fh:\n",
+    "    fh.write(\"Holle World\")\n",
+    "\n",
+    "try:\n",
+    "    with open(\"./Data/Homework.txt\", \"r\") as fh:\n",
+    "        f=fh.read()\n",
+    "        print(f)\n",
+    "except EnvironmentError: # parent of IOError, OSError *and* WindowsError where available\n",
+    "    pass    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[O] 檢查 Homework.txt 檔案字數是否符合 Hello World 字數\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 檢查 Homework.txt 檔案字數是否符合 Hello World 字數\n",
+    "\n",
+    "if len('Hello World') == len(f):\n",
+    "    print('[O] 檢查 Homework.txt 檔案字數是否符合 Hello World 字數')\n",
+    "else:\n",
+    "    print('[X] 檢查 Homework.txt 檔案字數是否符合 Hello World 字數')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -93,7 +173,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
