--- a/Homework/Day001_HW.ipynb
+++ b/Homework/Day001_HW.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "pjEaUcvLmE2m"
+   },
    "source": [
     "# 資料來源與檔案存取\n",
     "\n",
@@ -14,7 +17,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "c54aFX5NmE2t"
+   },
    "source": [
     "## 作業目標\n",
     "\n",
@@ -28,14 +34,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "yJZQ6rpFmE2v"
+   },
    "source": [
-    "### 1.（簡答題）檔案、API、爬蟲三種取得資料方式有什麼不同？"
+    "### 1.（簡答題）檔案、API、爬蟲三種取得資料方式有什麼不同？\n",
+    "    檔案：經由開放平台網站，直接下載以某種格式儲存的原始資料檔案，如CSV、JSON等。\n",
+    "    API：經由提供的介面，並由規定好的方式向網站索取資料，主要分為二個動作，使用者呼叫查詢與伺服器根據需求回傳。\n",
+    "    爬蟲：直接讀取目標網頁原始碼，在本地端解析並從中抽取想要的資料內容。\n",
+    "    檔案、API是由資料擁有者主動釋出已經整理好方便讀取或使用的格式的資料；而爬蟲是資料擁有者被動公開，由使用者自己解析並整理想要的資料內容。因此通常在選擇獲取資料的方式時，會先使用檔案與API以節省解析與整理資料的時間，最後再考慮使用爬蟲。\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "CFpuzOa4mE2y"
+   },
    "source": [
     "### 2.（實作）完成一個程式，需滿足下列需求：\n",
     "    * 下載指定檔案到 Data 資料夾，存成檔名 Homework.txt\n",
@@ -46,8 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "ovjbczzjmE21"
+   },
    "outputs": [],
    "source": [
     "# 根據需求引入正確的 Library\n",
@@ -58,8 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "Xkya218YmE2-"
+   },
    "outputs": [],
    "source": [
     "# 下載檔案到 Data 資料夾，存成檔名 Homework.txt\n",
@@ -74,8 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "oxHRroPGmE3C",
+    "outputId": "d5892efe-d192-49d5-8324-27f6a1c2418d"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -98,8 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "DqhMbMskmE3H",
+    "outputId": "aa010c04-e6ff-47b4-a517-08188b08d7cd"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -128,8 +162,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 0,
    "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "kETqClz2mE3O",
+    "outputId": "2d7ad76b-275a-48bd-a9ec-4e66f23a5f88",
     "scrolled": true
    },
    "outputs": [
@@ -149,30 +187,13 @@
     "else:\n",
     "    print('[X] 檢查 Homework.txt 檔案字數是否符合 Hello World 字數')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "colab": {
+   "name": "Day001_HW.ipynb",
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -192,5 +213,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
