--- a/Homework/Day001_HW.ipynb
+++ b/Homework/Day001_HW.ipynb
@@ -39,11 +39,17 @@
     "id": "yJZQ6rpFmE2v"
    },
    "source": [
-    "### 1.（簡答題）檔案、API、爬蟲三種取得資料方式有什麼不同？\n",
+    "### 1.（簡答題）檔案、API、爬蟲三種取得資料方式有什麼不同？"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "    檔案：經由開放平台網站，直接下載以某種格式儲存的原始資料檔案，如CSV、JSON等。\n",
     "    API：經由提供的介面，並由規定好的方式向網站索取資料，主要分為二個動作，使用者呼叫查詢與伺服器根據需求回傳。\n",
     "    爬蟲：直接讀取目標網頁原始碼，在本地端解析並從中抽取想要的資料內容。\n",
-    "    檔案、API是由資料擁有者主動釋出已經整理好方便讀取或使用的格式的資料；而爬蟲是資料擁有者被動公開，由使用者自己解析並整理想要的資料內容。因此通常在選擇獲取資料的方式時，會先使用檔案與API以節省解析與整理資料的時間，最後再考慮使用爬蟲。\n"
+    "    檔案、API是由資料擁有者主動釋出已經整理好方便讀取或使用的格式的資料；而爬蟲是資料擁有者被動公開，由使用者自己解析並整理想要的資料內容。因此通常在選擇獲取資料的方式時，會先使用檔案與API以節省解析與整理資料的時間，最後再考慮使用爬蟲。"
    ]
   },
   {
