--- a/Homework/Day001_HW.ipynb
+++ b/Homework/Day001_HW.ipynb
@@ -162,8 +162,7 @@
     "        f=fh.read()\n",
     "        print(f)\n",
     "except EnvironmentError: # parent of IOError, OSError *and* WindowsError where available\n",
-    "    pass    \n",
-    "    \n"
+    "    pass    "
    ]
   },
   {
