--- a/Homework/Day005_HW.ipynb
+++ b/Homework/Day005_HW.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,80 +95,80 @@
       "1.\n",
       "標題:我養的是小孩子吧？\n",
       "貼文時間:2020-03-03T07:50:53.595Z\n",
-      "留言人數:81\n",
-      "按讚人數:754\n",
+      "留言人數:85\n",
+      "按讚人數:811\n",
       "----------\n",
       "2.\n",
       "標題:黑奧斯卡\n",
       "貼文時間:2020-03-03T10:58:00.921Z\n",
-      "留言人數:10\n",
-      "按讚人數:325\n",
+      "留言人數:12\n",
+      "按讚人數:357\n",
       "----------\n",
       "3.\n",
       "標題:紙箱控🐈\n",
       "貼文時間:2020-03-03T06:00:53.007Z\n",
-      "留言人數:17\n",
-      "按讚人數:242\n",
+      "留言人數:19\n",
+      "按讚人數:258\n",
       "----------\n",
       "4.\n",
       "標題:暖貓 謝謝你\n",
       "貼文時間:2020-03-03T18:34:15.001Z\n",
-      "留言人數:8\n",
-      "按讚人數:190\n",
+      "留言人數:11\n",
+      "按讚人數:234\n",
       "----------\n",
       "5.\n",
-      "標題:殭屍貓長大了🌸\n",
-      "貼文時間:2020-03-03T10:00:59.433Z\n",
-      "留言人數:15\n",
-      "按讚人數:123\n",
-      "----------\n",
-      "6.\n",
       "標題:我的寵物有雙重人格？\n",
       "貼文時間:2020-03-03T05:24:54.154Z\n",
       "留言人數:9\n",
-      "按讚人數:119\n",
+      "按讚人數:133\n",
+      "----------\n",
+      "6.\n",
+      "標題:殭屍貓長大了🌸\n",
+      "貼文時間:2020-03-03T10:00:59.433Z\n",
+      "留言人數:15\n",
+      "按讚人數:129\n",
       "----------\n",
       "7.\n",
       "標題:犬種介紹特輯2  狗界戲精 柴犬~\n",
       "貼文時間:2020-03-03T11:46:27.778Z\n",
       "留言人數:16\n",
-      "按讚人數:57\n",
+      "按讚人數:61\n",
       "----------\n",
       "8.\n",
       "標題:鼠奴的那些日子🧏🏻‍♀️\n",
       "貼文時間:2020-03-03T12:49:28.447Z\n",
       "留言人數:5\n",
-      "按讚人數:26\n",
+      "按讚人數:28\n",
       "----------\n",
       "9.\n",
       "標題:超乖的鸚鵡\n",
       "貼文時間:2020-03-03T10:00:35.032Z\n",
       "留言人數:2\n",
-      "按讚人數:22\n",
+      "按讚人數:24\n",
       "----------\n",
       "10.\n",
       "標題:第一次養貓的我\n",
       "貼文時間:2020-03-03T16:02:29.061Z\n",
       "留言人數:4\n",
-      "按讚人數:18\n",
+      "按讚人數:20\n",
       "----------\n",
       "11.\n",
-      "標題:太可愛了！求原圖🥺\n",
-      "貼文時間:2020-03-04T04:05:13.918Z\n",
-      "留言人數:0\n",
-      "按讚人數:17\n",
-      "----------\n",
-      "12.\n",
       "標題:#分享 新屋收容所不當剪耳\n",
       "貼文時間:2020-03-03T09:10:02.726Z\n",
       "留言人數:7\n",
+      "按讚人數:18\n",
+      "----------\n",
+      "12.\n",
+      "標題:太可愛了！求原圖🥺\n",
+      "貼文時間:2020-03-04T04:05:13.918Z\n",
+      "留言人數:0\n",
       "按讚人數:17\n",
       "----------\n",
       "13.\n",
       "標題:遛貓遛到回不了家\n",
       "貼文時間:2020-03-04T02:24:23.766Z\n",
       "留言人數:4\n",
-      "按讚人數:16\n",
+      "按讚人數:17\n",
       "----------\n",
       "14.\n",
       "標題:我的貓讓我流了一地鼻血！\n",
@@ -198,25 +198,25 @@
       "標題:灌倉鼠紅豆泥？\n",
       "貼文時間:2020-03-03T12:15:44.567Z\n",
       "留言人數:8\n",
-      "按讚人數:11\n",
+      "按讚人數:12\n",
       "----------\n",
       "19.\n",
       "標題:諧星狗長大了🐶\n",
       "貼文時間:2020-03-03T19:12:57.135Z\n",
       "留言人數:2\n",
-      "按讚人數:10\n",
+      "按讚人數:11\n",
       "----------\n",
       "20.\n",
+      "標題:我的公主我心疼\n",
+      "貼文時間:2020-03-03T21:15:04.047Z\n",
+      "留言人數:4\n",
+      "按讚人數:10\n",
+      "----------\n",
+      "21.\n",
       "標題:以為是和藹可親的畫面，居然⋯\n",
       "貼文時間:2020-03-03T11:48:07.511Z\n",
       "留言人數:3\n",
       "按讚人數:10\n",
-      "----------\n",
-      "21.\n",
-      "標題:我的公主我心疼\n",
-      "貼文時間:2020-03-03T21:15:04.047Z\n",
-      "留言人數:4\n",
-      "按讚人數:9\n",
       "----------\n",
       "22.\n",
       "標題:#羊駝 天然妹妹頭配天然微笑\n",
@@ -231,45 +231,45 @@
       "按讚人數:8\n",
       "----------\n",
       "24.\n",
+      "標題:不當演員可惜了\n",
+      "貼文時間:2020-03-04T13:24:51.655Z\n",
+      "留言人數:1\n",
+      "按讚人數:7\n",
+      "----------\n",
+      "25.\n",
+      "標題:寵物圖卡來襲❤️\n",
+      "貼文時間:2020-03-04T12:55:05.985Z\n",
+      "留言人數:6\n",
+      "按讚人數:6\n",
+      "----------\n",
+      "26.\n",
       "標題:我的貓咪會ㄟˊ依\n",
       "貼文時間:2020-03-03T16:43:13.425Z\n",
       "留言人數:3\n",
       "按讚人數:6\n",
       "----------\n",
-      "25.\n",
-      "標題:寵物圖卡來襲❤️\n",
-      "貼文時間:2020-03-04T12:55:05.985Z\n",
-      "留言人數:5\n",
-      "按讚人數:5\n",
-      "----------\n",
-      "26.\n",
-      "標題:我知道睡覺很舒服，你也不用這樣吧？!\n",
-      "貼文時間:2020-03-03T13:40:23.156Z\n",
-      "留言人數:4\n",
-      "按讚人數:5\n",
-      "----------\n",
       "27.\n",
-      "標題:化毛膏替代\n",
-      "貼文時間:2020-03-03T10:18:07.297Z\n",
-      "留言人數:8\n",
-      "按讚人數:5\n",
-      "----------\n",
-      "28.\n",
-      "標題:貓遺失\n",
-      "貼文時間:2020-03-03T09:21:59.083Z\n",
-      "留言人數:1\n",
-      "按讚人數:5\n",
-      "----------\n",
-      "29.\n",
       "標題:協尋貓咪-明德捷運站旁失蹤\n",
       "貼文時間:2020-03-03T03:57:52.378Z\n",
       "留言人數:0\n",
+      "按讚人數:6\n",
+      "----------\n",
+      "28.\n",
+      "標題:兄day你怎麼變這樣\n",
+      "貼文時間:2020-03-04T14:12:22.188Z\n",
+      "留言人數:2\n",
+      "按讚人數:5\n",
+      "----------\n",
+      "29.\n",
+      "標題:再說我認真魔人 小心我噴死妳\n",
+      "貼文時間:2020-03-04T12:07:14.145Z\n",
+      "留言人數:3\n",
       "按讚人數:5\n",
       "----------\n",
       "30.\n",
-      "標題:Tina 水族小缸｜蝦蝦入厝拉\n",
-      "貼文時間:2020-03-03T03:13:02.579Z\n",
-      "留言人數:1\n",
+      "標題:同學我需要妳的貓來撫慰心靈\n",
+      "貼文時間:2020-03-04T09:52:05.983Z\n",
+      "留言人數:3\n",
       "按讚人數:5\n",
       "----------\n"
      ]
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -297,12 +297,12 @@
      "output_type": "stream",
      "text": [
       "熱門:\n",
-      "平均留言人數:8.1\n",
-      "平均按讚人數:73.6\n",
+      "平均留言人數:8.133333333333333\n",
+      "平均按讚人數:75.26666666666667\n",
       "-----------------\n",
       "非熱門:\n",
       "平均留言人數:2.466666666666667\n",
-      "平均按讚人數:11.8\n"
+      "平均按讚人數:12.233333333333333\n"
      ]
     }
    ],
